[metadata]
name = requirements-wayback-machine
version = attr: requirements_wayback_machine.__version__
author = Tomas Karabela
author_email = tkarabela@seznam.cz
description = Wayback machine for pip requirements.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tkarabela/requirements-wayback-machine
license = MIT
project_urls =
    Bug Tracker = https://github.com/tkarabela/requirements-wayback-machine/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities
    Typing :: Typed

[options]
py_modules =
    requirements_wayback_machine
python_requires = >=3.9
install_requires =
    requests~=2.28
    packaging~=23.0

[options.entry_points]
console_scripts =
    requirements_wayback_machine = requirements_wayback_machine:main

[mypy]
files = requirements_wayback_machine.py, tests/test_*.py
strict = True

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
